# ace-buddy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.tmp-cfg/: job.md  resume.md  system.md
src/ace_buddy/: __init__.py  app.py  audio.py  cheatsheet.py  llm.py  pipeline.py  preflight.py  prompt.py  server.py  trigger.py  vision.py
src/ace_buddy/ui/: index.html
tests/: _fixture_gen.py  conftest.py  test_audio_ring.py  test_e2e_full_loop.py  test_live_api.py  test_pipeline.py  test_preflight.py  test_prompt.py  test_smoke.py  test_trigger.py  test_vision.py
